@@ -1,8 +1,11 @@
 package eu.kalafatic.evolution.view.wizards;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.StandardCopyOption;
@@ -33,6 +36,7 @@ import org.eclipse.swt.events.SelectionEvent;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.Button;
+import org.eclipse.swt.widgets.Combo;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.swt.widgets.Display;
 import org.eclipse.swt.widgets.FileDialog;
@@ -49,345 +53,437 @@ import eu.kalafatic.evolution.model.orchestration.OrchestrationFactory;
 import eu.kalafatic.evolution.model.orchestration.Orchestrator;
 
 public class OllamaSettingsPage extends WizardPage {
-    private Text urlText, modelText, pathText;
-    private Button skipCheck;
-    private ControlDecoration pathDecorator, modelDecorator;
-    private SimpleContentProposalProvider proposalProvider;
-    private Job validationJob;
+	public static final String DEFAULT_OLLAMA_URL = "http://localhost:11434";
+	
+	private Combo modelCombo;
+	private Text urlText, modelText , pathText;
+	private Button skipCheck;
+	private ControlDecoration pathDecorator, modelDecorator;
+	private SimpleContentProposalProvider proposalProvider;
+	private Job validationJob;
+	
+	public class OllamaModel {
+	    private String name;
+	    private long size;
 
-    public OllamaSettingsPage() {
-        super("OllamaSettingsPage");
-        setTitle("Ollama Settings");
-        setDescription("Configure Ollama API settings.");
-    }
+	    public OllamaModel(String name, long size) {
+	        this.name = name;
+	        this.size = size;
+	    }
 
-    @Override
-    public void createControl(Composite parent) {
-        Composite container = new Composite(parent, SWT.NONE);
-        container.setLayout(new GridLayout(2, false));
+	    public String getName() { return name; }
+	    public long getSize() { return size; }
+	}
 
-        new Label(container, SWT.NONE).setText("Ollama URL:");
-        urlText = new Text(container, SWT.BORDER);
-        urlText.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
-        urlText.setText("http://localhost:11434");
+	public OllamaSettingsPage() {
+		super("OllamaSettingsPage");
+		setTitle("Ollama Settings");
+		setDescription("Configure Ollama API settings.");
+	}
 
-        new Label(container, SWT.NONE).setText("Model Name:");
-        modelText = new Text(container, SWT.BORDER);
-        modelText.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
-        modelText.setText("llama3");
+	@Override
+	public void createControl(Composite parent) {
+		Composite container = new Composite(parent, SWT.NONE);
+		container.setLayout(new GridLayout(2, false));
 
-        new Label(container, SWT.NONE).setText("Executable Path:");
-        Composite pathComposite = new Composite(container, SWT.NONE);
-        pathComposite.setLayout(new GridLayout(2, false));
-        pathComposite.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
+		new Label(container, SWT.NONE).setText("Ollama URL:");
+		urlText = new Text(container, SWT.BORDER);
+		urlText.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
+		urlText.setText(DEFAULT_OLLAMA_URL);
 
-        pathText = new Text(pathComposite, SWT.BORDER);
-        pathText.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
+		new Label(container, SWT.NONE).setText("Model Name:");	
+		modelText = new Text(container, SWT.BORDER);
+		modelText.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
+				
+		new Label(container, SWT.NONE).setText("Select Model:");	
+		selectModel(container);
 
-        Button browseBtn = new Button(pathComposite, SWT.PUSH);
-        browseBtn.setText("Browse...");
-        browseBtn.addSelectionListener(new SelectionAdapter() {
-            @Override
-            public void widgetSelected(SelectionEvent e) {
-                FileDialog dialog = new FileDialog(getShell(), SWT.OPEN);
-                String path = dialog.open();
-                if (path != null) {
-                    pathText.setText(path);
-                }
-            }
-        });
+		new Label(container, SWT.NONE).setText("Executable Path:");
+		Composite pathComposite = new Composite(container, SWT.NONE);
+		pathComposite.setLayout(new GridLayout(2, false));
+		pathComposite.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
 
-        String defaultPath = "/usr/local/bin/ollama";
-        String os = System.getProperty("os.name").toLowerCase();
-        if (os.contains("win")) {
-            String localAppData = System.getenv("LOCALAPPDATA");
-            if (localAppData != null) {
-                defaultPath = localAppData + "\\Programs\\Ollama\\ollama.exe";
-            } else {
-                defaultPath = "C:\\Users\\" + System.getProperty("user.name") + "\\AppData\\Local\\Programs\\Ollama\\ollama.exe";
-            }
-        } else if (os.contains("mac")) {
-            defaultPath = "/usr/local/bin/ollama";
-        }
-        pathText.setText(defaultPath);
+		pathText = new Text(pathComposite, SWT.BORDER);
+		pathText.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
 
-        pathDecorator = new ControlDecoration(pathText, SWT.TOP | SWT.LEFT);
-        pathDecorator.setImage(FieldDecorationRegistry.getDefault()
-                .getFieldDecoration(FieldDecorationRegistry.DEC_ERROR).getImage());
-        pathDecorator.hide();
+		Button browseBtn = new Button(pathComposite, SWT.PUSH);
+		browseBtn.setText("Browse...");
+		browseBtn.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				FileDialog dialog = new FileDialog(getShell(), SWT.OPEN);
+				String path = dialog.open();
+				if (path != null) {
+					pathText.setText(path);
+				}
+			}
+		});
 
-        modelDecorator = new ControlDecoration(modelText, SWT.TOP | SWT.LEFT);
-        modelDecorator.setImage(FieldDecorationRegistry.getDefault()
-                .getFieldDecoration(FieldDecorationRegistry.DEC_WARNING).getImage());
-        modelDecorator.hide();
+		String defaultPath = "/usr/local/bin/ollama";
+		String os = System.getProperty("os.name").toLowerCase();
+		if (os.contains("win")) {
+			String localAppData = System.getenv("LOCALAPPDATA");
+			if (localAppData != null) {
+				defaultPath = localAppData + "\\Programs\\Ollama\\ollama.exe";
+			} else {
+				defaultPath = "C:\\Users\\" + System.getProperty("user.name")
+						+ "\\AppData\\Local\\Programs\\Ollama\\ollama.exe";
+			}
+		} else if (os.contains("mac")) {
+			defaultPath = "/usr/local/bin/ollama";
+		}
+		pathText.setText(defaultPath);
 
-        proposalProvider = new SimpleContentProposalProvider(new String[0]);
-        proposalProvider.setFiltering(true);
-        new ContentProposalAdapter(modelText, new TextContentAdapter(), proposalProvider, null, null);
+		pathDecorator = new ControlDecoration(pathText, SWT.TOP | SWT.LEFT);
+		pathDecorator.setImage(
+				FieldDecorationRegistry.getDefault().getFieldDecoration(FieldDecorationRegistry.DEC_ERROR).getImage());
+		pathDecorator.hide();
 
-        Link setupLink = new Link(container, SWT.NONE);
-        setupLink.setText("<a>Setup/Download Ollama...</a>");
-        setupLink.setLayoutData(new GridData(SWT.BEGINNING, SWT.CENTER, false, false, 2, 1));
-        setupLink.addSelectionListener(new SelectionAdapter() {
-            @Override
-            public void widgetSelected(SelectionEvent e) {
-                OrchestrationFactory factory = OrchestrationFactory.eINSTANCE;
-                Orchestrator tempOrch = factory.createOrchestrator();
-                Ollama ollama = factory.createOllama();
-                ollama.setUrl(urlText.getText());
-                ollama.setPath(pathText.getText());
-                tempOrch.setOllama(ollama);
+		modelDecorator = new ControlDecoration(modelText, SWT.TOP | SWT.LEFT);
+		modelDecorator.setImage(FieldDecorationRegistry.getDefault()
+				.getFieldDecoration(FieldDecorationRegistry.DEC_WARNING).getImage());
+		modelDecorator.hide();
 
-                SetupOllamaWizard wizard = new SetupOllamaWizard(tempOrch);
-                WizardDialog dialog = new WizardDialog(getShell(), wizard);
-                if (dialog.open() == WizardDialog.OK) {
-                    urlText.setText(ollama.getUrl());
-                    pathText.setText(ollama.getPath());
-                    validateOllama();
-                }
-            }
-        });
+		proposalProvider = new SimpleContentProposalProvider(new String[0]);
+		proposalProvider.setFiltering(true);
+		new ContentProposalAdapter(modelText, new TextContentAdapter(), proposalProvider, null, null);
 
-        Link modelsLink = new Link(container, SWT.NONE);
-        modelsLink.setText("<a>Browse Ollama Models...</a>");
-        modelsLink.setLayoutData(new GridData(SWT.BEGINNING, SWT.CENTER, false, false, 2, 1));
-        modelsLink.addSelectionListener(new SelectionAdapter() {
-            @Override
-            public void widgetSelected(SelectionEvent e) {
-                openUrl("https://ollama.com/library");
-            }
-        });
+		Link setupLink = new Link(container, SWT.NONE);
+		setupLink.setText("<a>Setup/Download Ollama...</a>");
+		setupLink.setLayoutData(new GridData(SWT.BEGINNING, SWT.CENTER, false, false, 2, 1));
+		setupLink.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				OrchestrationFactory factory = OrchestrationFactory.eINSTANCE;
+				Orchestrator tempOrch = factory.createOrchestrator();
+				Ollama ollama = factory.createOllama();
+				ollama.setUrl(urlText.getText());
+				ollama.setPath(pathText.getText());
+				tempOrch.setOllama(ollama);
 
-        Button downloadLatestBtn = new Button(container, SWT.PUSH);
-        downloadLatestBtn.setText("Download Latest Ollama Headless");
-        downloadLatestBtn.setLayoutData(new GridData(SWT.BEGINNING, SWT.CENTER, false, false, 2, 1));
-        downloadLatestBtn.addSelectionListener(new SelectionAdapter() {
-            @Override
-            public void widgetSelected(SelectionEvent e) {
-                downloadLatestOllama();
-            }
-        });
+				SetupOllamaWizard wizard = new SetupOllamaWizard(tempOrch);
+				WizardDialog dialog = new WizardDialog(getShell(), wizard);
+				if (dialog.open() == WizardDialog.OK) {
+					urlText.setText(ollama.getUrl());
+					pathText.setText(ollama.getPath());
+					validateOllama();
+				}
+			}
+		});
 
-        Button loadFromDiskBtn = new Button(container, SWT.PUSH);
-        loadFromDiskBtn.setText("Load Install Package from Disk...");
-        loadFromDiskBtn.setLayoutData(new GridData(SWT.BEGINNING, SWT.CENTER, false, false, 2, 1));
-        loadFromDiskBtn.addSelectionListener(new SelectionAdapter() {
-            @Override
-            public void widgetSelected(SelectionEvent e) {
-                loadInstallPackageFromDisk();
-            }
-        });
+		Link modelsLink = new Link(container, SWT.NONE);
+		modelsLink.setText("<a>Browse Ollama Models...</a>");
+		modelsLink.setLayoutData(new GridData(SWT.BEGINNING, SWT.CENTER, false, false, 2, 1));
+		modelsLink.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				openUrl("https://ollama.com/library");
+			}
+		});
 
-        pathText.addModifyListener(e -> validateOllama());
-        urlText.addModifyListener(e -> validateOllama());
-        modelText.addModifyListener(e -> validateOllama());
+		Button downloadLatestBtn = new Button(container, SWT.PUSH);
+		downloadLatestBtn.setText("Download Latest Ollama Headless");
+		downloadLatestBtn.setLayoutData(new GridData(SWT.BEGINNING, SWT.CENTER, false, false, 2, 1));
+		downloadLatestBtn.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				downloadLatestOllama();
+			}
+		});
 
-        skipCheck = new Button(container, SWT.CHECK);
-        skipCheck.setText("Skip this step and setup later");
-        skipCheck.setLayoutData(new GridData(SWT.BEGINNING, SWT.CENTER, true, false, 2, 1));
-        skipCheck.addSelectionListener(new SelectionAdapter() {
-            @Override
-            public void widgetSelected(SelectionEvent e) {
-                validateOllama();
-            }
-        });
+		Button loadFromDiskBtn = new Button(container, SWT.PUSH);
+		loadFromDiskBtn.setText("Load Install Package from Disk...");
+		loadFromDiskBtn.setLayoutData(new GridData(SWT.BEGINNING, SWT.CENTER, false, false, 2, 1));
+		loadFromDiskBtn.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				loadInstallPackageFromDisk();
+			}
+		});
 
-        setControl(container);
-        validateOllama();
-    }
+		pathText.addModifyListener(e -> validateOllama());
+		urlText.addModifyListener(e -> validateOllama());
+		modelText.addModifyListener(e -> validateOllama());
 
-    private void validateOllama() {
-        if (skipCheck.getSelection()) {
-            if (validationJob != null) validationJob.cancel();
-            pathDecorator.hide();
-            modelDecorator.hide();
-            setPageComplete(true);
-            setErrorMessage(null);
-            return;
-        }
-        String path = pathText.getText();
-        File file = new File(path);
-        if (!file.exists()) {
-            pathDecorator.setDescriptionText("Ollama executable not found at specified path.");
-            pathDecorator.show();
-            setPageComplete(false);
-            setErrorMessage("Ollama executable not found.");
-        } else {
-            pathDecorator.hide();
-            setErrorMessage(null);
-            setPageComplete(true);
-        }
+		skipCheck = new Button(container, SWT.CHECK);
+		skipCheck.setText("Skip this step and setup later");
+		skipCheck.setLayoutData(new GridData(SWT.BEGINNING, SWT.CENTER, true, false, 2, 1));
+		skipCheck.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent e) {
+				validateOllama();
+			}
+		});
 
-        // Debounced async check for models
-        if (validationJob != null) validationJob.cancel();
-        final String url = urlText.getText();
-        final String model = modelText.getText();
-        validationJob = new Job("Validate Ollama") {
-            @Override
-            protected IStatus run(IProgressMonitor monitor) {
-                checkOllamaCommunication(url, model);
-                return Status.OK_STATUS;
-            }
-        };
-        validationJob.setSystem(true);
-        validationJob.schedule(800);
-    }
+		setControl(container);
+		validateOllama();
+	}
 
-    private void checkOllamaCommunication(String url, String model) {
-        try {
-            HttpClient client = HttpClient.newBuilder()
-                    .connectTimeout(java.time.Duration.ofSeconds(2))
-                    .build();
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(java.net.URI.create(url + "/api/tags"))
-                    .GET()
-                    .build();
-            client.sendAsync(request, HttpResponse.BodyHandlers.ofString())
-                    .thenAccept(response -> {
-                        if (response.statusCode() == 200) {
-                            JSONObject json = new JSONObject(response.body());
-                            JSONArray models = json.getJSONArray("models");
-                            List<String> modelNames = new ArrayList<>();
-                            boolean found = false;
-                            for (int i = 0; i < models.length(); i++) {
-                                String name = models.getJSONObject(i).getString("name");
-                                modelNames.add(name);
-                                if (name.equals(model) || name.split(":")[0].equals(model)) {
-                                    found = true;
-                                }
-                            }
-                            final boolean modelFound = found;
-                            final String[] names = modelNames.toArray(new String[0]);
-                            Display.getDefault().asyncExec(() -> {
-                                proposalProvider.setProposals(names);
-                                if (modelFound) {
-                                    modelDecorator.hide();
-                                } else {
-                                    modelDecorator.setDescriptionText("Model not found on Ollama server.");
-                                    modelDecorator.show();
-                                }
-                            });
-                        }
-                    }).exceptionally(ex -> {
-                        Display.getDefault().asyncExec(() -> {
-                            modelDecorator.setDescriptionText("Could not connect to Ollama server.");
-                            modelDecorator.show();
-                        });
-                        return null;
-                    });
-        } catch (Exception e) {
-            // ignore
-        }
-    }
+	private Combo selectModel(Composite parent) {
+		List<OllamaModel> models = loadModels(); // Load models to populate the combo
+		
+		Combo combo = new Combo(parent, SWT.DROP_DOWN | SWT.READ_ONLY);	
 
-    private void loadInstallPackageFromDisk() {
-        FileDialog dialog = new FileDialog(getShell(), SWT.OPEN);
-        dialog.setText("Select Ollama Install Package");
-        String sourcePath = dialog.open();
-        if (sourcePath != null) {
-            File sourceFile = new File(sourcePath);
-            Job job = new Job("Loading Ollama Package") {
-                @Override
-                protected IStatus run(IProgressMonitor monitor) {
-                    monitor.beginTask("Copying Ollama", IProgressMonitor.UNKNOWN);
-                    try {
-                        File targetFile = new File(System.getProperty("user.home"), sourceFile.getName());
-                        try {
-                            IWorkspaceRoot root = ResourcesPlugin.getWorkspace().getRoot();
-                            if (root != null && root.getLocation() != null) {
-                                File workspaceDir = root.getLocation().toFile();
-                                targetFile = new File(workspaceDir, sourceFile.getName());
-                            }
-                        } catch (Exception e) {}
+		if (models != null) {
+		    for (OllamaModel f : models) {
+		        combo.add(f.getName());
+		    }
+		}
 
-                        Files.copy(sourceFile.toPath(), targetFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
-                        targetFile.setExecutable(true);
+		// selection listener
+		combo.addListener(SWT.Selection, e -> {
+		    int index = combo.getSelectionIndex();
+		    if (index >= 0) {
+		    	OllamaModel selected = models.get(index);
+		        System.out.println("Selected: " + selected.getName());
+		    }
+		});
+		return combo;
+	}
 
-                        final String installedPath = targetFile.getAbsolutePath();
-                        Display.getDefault().asyncExec(() -> {
-                            pathText.setText(installedPath);
-                            MessageDialog.openInformation(getShell(), "Load Complete", "Ollama package loaded to: " + installedPath);
-                        });
-                    } catch (Exception e) {
-                        return new Status(IStatus.ERROR, "eu.kalafatic.evolution.view", "Load failed", e);
-                    } finally {
-                        monitor.done();
-                    }
-                    return Status.OK_STATUS;
-                }
-            };
-            job.setUser(true);
-            job.schedule();
-        }
-    }
+	private void validateOllama() {
+		if (skipCheck.getSelection()) {
+			if (validationJob != null)
+				validationJob.cancel();
+			pathDecorator.hide();
+			modelDecorator.hide();
+			setPageComplete(true);
+			setErrorMessage(null);
+			return;
+		}
+		String path = pathText.getText();
+		File file = new File(path);
+		if (!file.exists()) {
+			pathDecorator.setDescriptionText("Ollama executable not found at specified path.");
+			pathDecorator.show();
+			setPageComplete(false);
+			setErrorMessage("Ollama executable not found.");
+		} else {
+			pathDecorator.hide();
+			setErrorMessage(null);
+			setPageComplete(true);
+		}
 
-    private void downloadLatestOllama() {
-        Job job = new Job("Download Ollama") {
-            @Override
-            protected IStatus run(IProgressMonitor monitor) {
-                monitor.beginTask("Downloading Ollama", IProgressMonitor.UNKNOWN);
-                try {
-                    String os = System.getProperty("os.name").toLowerCase();
-                    String urlStr = "https://ollama.com/download/ollama-linux-amd64";
-                    String binName = "ollama";
-                    if (os.contains("win")) {
-                        urlStr = "https://ollama.com/download/ollama-windows-amd64.zip";
-                        binName = "ollama.zip";
-                    } else if (os.contains("mac")) {
-                        urlStr = "https://ollama.com/download/ollama-darwin-amd64";
-                    }
+		// Debounced async check for models
+		if (validationJob != null)
+			validationJob.cancel();
+		final String url = urlText.getText();
+		final String model = modelText.getText();
+		validationJob = new Job("Validate Ollama") {
+			@Override
+			protected IStatus run(IProgressMonitor monitor) {
+				checkOllamaCommunication(url, model);
+				return Status.OK_STATUS;
+			}
+		};
+		validationJob.setSystem(true);
+		validationJob.schedule(800);
+	}
 
-                    URL url = new URL(urlStr);
-                    File targetFile = new File(System.getProperty("user.home"), binName);
+	private void checkOllamaCommunication(String url, String model) {
+		try {
+			HttpClient client = HttpClient.newBuilder().connectTimeout(java.time.Duration.ofSeconds(2)).build();
+			HttpRequest request = HttpRequest.newBuilder().uri(java.net.URI.create(url + "/api/tags")).GET().build();
+			client.sendAsync(request, HttpResponse.BodyHandlers.ofString()).thenAccept(response -> {
+				if (response.statusCode() == 200) {
+					JSONObject json = new JSONObject(response.body());
+					JSONArray models = json.getJSONArray("models");
+					List<String> modelNames = new ArrayList<>();
+					boolean found = false;
+					for (int i = 0; i < models.length(); i++) {
+						String name = models.getJSONObject(i).getString("name");
+						modelNames.add(name);
+						if (name.equals(model) || name.split(":")[0].equals(model)) {
+							found = true;
+						}
+					}
+					final boolean modelFound = found;
+					final String[] names = modelNames.toArray(new String[0]);
+					Display.getDefault().asyncExec(() -> {
+						proposalProvider.setProposals(names);
+						if (modelFound) {
+							modelDecorator.hide();
+						} else {
+							modelDecorator.setDescriptionText("Model not found on Ollama server.");
+							modelDecorator.show();
+						}
+					});
+				}
+			}).exceptionally(ex -> {
+				Display.getDefault().asyncExec(() -> {
+					modelDecorator.setDescriptionText("Could not connect to Ollama server.");
+					modelDecorator.show();
+				});
+				return null;
+			});
+		} catch (Exception e) {
+			// ignore
+		}
+	}
 
-                    // Try to find a better place in workspace if possible
-                    try {
-                        IWorkspaceRoot root = ResourcesPlugin.getWorkspace().getRoot();
-                        if (root != null && root.getLocation() != null) {
-                            File workspaceDir = root.getLocation().toFile();
-                            targetFile = new File(workspaceDir, binName);
-                        }
-                    } catch (Exception e) {}
+	private void loadInstallPackageFromDisk() {
+		FileDialog dialog = new FileDialog(getShell(), SWT.OPEN);
+		dialog.setText("Select Ollama Install Package");
+		String sourcePath = dialog.open();
+		if (sourcePath != null) {
+			File sourceFile = new File(sourcePath);
+			Job job = new Job("Loading Ollama Package") {
+				@Override
+				protected IStatus run(IProgressMonitor monitor) {
+					monitor.beginTask("Copying Ollama", IProgressMonitor.UNKNOWN);
+					try {
+						File targetFile = new File(System.getProperty("user.home"), sourceFile.getName());
+						try {
+							IWorkspaceRoot root = ResourcesPlugin.getWorkspace().getRoot();
+							if (root != null && root.getLocation() != null) {
+								File workspaceDir = root.getLocation().toFile();
+								targetFile = new File(workspaceDir, sourceFile.getName());
+							}
+						} catch (Exception e) {
+						}
 
-                    try (InputStream in = url.openStream();
-                         FileOutputStream out = new FileOutputStream(targetFile)) {
-                        byte[] buffer = new byte[8192];
-                        int bytesRead;
-                        while ((bytesRead = in.read(buffer)) != -1) {
-                            out.write(buffer, 0, bytesRead);
-                        }
-                    }
-                    targetFile.setExecutable(true);
+						Files.copy(sourceFile.toPath(), targetFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
+						targetFile.setExecutable(true);
 
-                    final String downloadedPath = targetFile.getAbsolutePath();
-                    Display.getDefault().asyncExec(() -> {
-                        pathText.setText(downloadedPath);
-                        MessageDialog.openInformation(getShell(), "Download Complete", "Ollama downloaded to: " + downloadedPath);
-                    });
+						final String installedPath = targetFile.getAbsolutePath();
+						Display.getDefault().asyncExec(() -> {
+							pathText.setText(installedPath);
+							MessageDialog.openInformation(getShell(), "Load Complete",
+									"Ollama package loaded to: " + installedPath);
+						});
+					} catch (Exception e) {
+						return new Status(IStatus.ERROR, "eu.kalafatic.evolution.view", "Load failed", e);
+					} finally {
+						monitor.done();
+					}
+					return Status.OK_STATUS;
+				}
+			};
+			job.setUser(true);
+			job.schedule();
+		}
+	}
 
-                } catch (Exception e) {
-                    return new Status(IStatus.ERROR, "eu.kalafatic.evolution.view", "Download failed", e);
-                } finally {
-                    monitor.done();
-                }
-                return Status.OK_STATUS;
-            }
-        };
-        job.setUser(true);
-        job.schedule();
-    }
+	private void downloadLatestOllama() {
+		Job job = new Job("Download Ollama") {
+			@Override
+			protected IStatus run(IProgressMonitor monitor) {
+				monitor.beginTask("Downloading Ollama", IProgressMonitor.UNKNOWN);
+				try {
+					String os = System.getProperty("os.name").toLowerCase();
+					String urlStr = "https://ollama.com/download/ollama-linux-amd64";
+					String binName = "ollama";
+					if (os.contains("win")) {
+						urlStr = "https://ollama.com/download/ollama-windows-amd64.zip";
+						binName = "ollama.zip";
+					} else if (os.contains("mac")) {
+						urlStr = "https://ollama.com/download/ollama-darwin-amd64";
+					}
 
-    private void openUrl(String url) {
-        try {
-            IWorkbenchBrowserSupport support = PlatformUI.getWorkbench().getBrowserSupport();
-            support.createBrowser(IWorkbenchBrowserSupport.AS_EDITOR, "evoOllamaHelp", "Ollama Help", "Ollama Help").openURL(new URL(url));
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-    }
+					URL url = new URL(urlStr);
+					File targetFile = new File(System.getProperty("user.home"), binName);
 
-    public String getOllamaUrl() { return urlText.getText(); }
-    public String getModelName() { return modelText.getText(); }
-    public String getExecutablePath() { return pathText.getText(); }
-    public boolean isSkipped() { return skipCheck.getSelection(); }
+					// Try to find a better place in workspace if possible
+					try {
+						IWorkspaceRoot root = ResourcesPlugin.getWorkspace().getRoot();
+						if (root != null && root.getLocation() != null) {
+							File workspaceDir = root.getLocation().toFile();
+							targetFile = new File(workspaceDir, binName);
+						}
+					} catch (Exception e) {
+					}
+
+					try (InputStream in = url.openStream(); FileOutputStream out = new FileOutputStream(targetFile)) {
+						byte[] buffer = new byte[8192];
+						int bytesRead;
+						while ((bytesRead = in.read(buffer)) != -1) {
+							out.write(buffer, 0, bytesRead);
+						}
+					}
+					targetFile.setExecutable(true);
+
+					final String downloadedPath = targetFile.getAbsolutePath();
+					Display.getDefault().asyncExec(() -> {
+						pathText.setText(downloadedPath);
+						MessageDialog.openInformation(getShell(), "Download Complete",
+								"Ollama downloaded to: " + downloadedPath);
+					});
+
+				} catch (Exception e) {
+					return new Status(IStatus.ERROR, "eu.kalafatic.evolution.view", "Download failed", e);
+				} finally {
+					monitor.done();
+				}
+				return Status.OK_STATUS;
+			}
+		};
+		job.setUser(true);
+		job.schedule();
+	}
+
+	private void openUrl(String url) {
+		try {
+			IWorkbenchBrowserSupport support = PlatformUI.getWorkbench().getBrowserSupport();
+			support.createBrowser(IWorkbenchBrowserSupport.AS_EDITOR, "evoOllamaHelp", "Ollama Help", "Ollama Help")
+					.openURL(new URL(url));
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+	}
+
+	public List<OllamaModel> loadModels() {
+	    List<OllamaModel> result = new ArrayList<>();
+
+	    try {
+	        URL url = new URL(DEFAULT_OLLAMA_URL + "/api/tags");
+	        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+	        conn.setRequestMethod("GET");
+
+	        BufferedReader reader = new BufferedReader(
+	            new InputStreamReader(conn.getInputStream())
+	        );
+
+	        StringBuilder json = new StringBuilder();
+	        String line;
+
+	        while ((line = reader.readLine()) != null) {
+	            json.append(line);
+	        }
+
+	        reader.close();
+
+	        JSONObject obj = new JSONObject(json.toString());
+	        JSONArray models = obj.getJSONArray("models");
+
+	        for (int i = 0; i < models.length(); i++) {
+	            JSONObject m = models.getJSONObject(i);
+
+	            String name = m.getString("name");
+	            long size = m.optLong("size", 0);
+
+	            result.add(new OllamaModel(name, size));
+	        }
+
+	    } catch (Exception e) {
+	        e.printStackTrace();
+	    }
+
+	    return result;
+	}
+	
+	public String getOllamaUrl() {
+		return urlText.getText();
+	}
+
+	public String getModelName() {
+		return modelText.getText();
+	}
+
+	public String getExecutablePath() {
+		return pathText.getText();
+	}
+
+	public boolean isSkipped() {
+		return skipCheck.getSelection();
+	}
 }
